<resources>
    <string name="app_name">Step and Height counter</string>
    <string name="action_settings">Settings</string>
    <string name="saving">Saving</string>
    <string name="permission_SD">No permission to write to SD Card</string>
    <string name="sensor_active">Stepsensor active</string>
    <string name="button_running">Running\nPress to Pause</string>
    <string name="sensor_register_failed">Cannot activate barometric sensor. App doesn\'t run without one!</string>
    <string name="sensor_pause">Stepsensor paused</string>
    <string name="button_pause">Start Measurement</string>
    <string name="debug_create_finished" translatable="false">Create finished</string>
    <string name="debug_service_disconnected" translatable="false">Service is disconnected</string>
    <string name="debug_service_connected" translatable="false">Service is connected</string>
    <string name="button_restart">Restart application</string>
    <string name="calib_not_number">Not a number for height calibration</string>
    <string name="service_not_started">Sensor Service not started yet!</string>
    <string name="debug_stat_step_event_after_pause" translatable="false">Step Counter after pause event saved</string>
    <string name="debug_stat_step_event" translatable="false">Step Counter event saved</string>
    <string name="debug_stat_pressure_old" translatable="false">No actual pressure value, putting additional task in queue 2 seconds later</string>
    <string name="out_stat_listlength">"List length: "</string>
    <string name="out_stat_pressure">"Pressure: "</string>
    <string name="out_stat_referenceheight">"Reference height: "</string>
    <string name="notification_text">Step and Height Sensor is counting.</string>
    <string name="no_values">no values</string>
    <string name="debug_stat_wakeup_alarm" translatable="false">wake up from alarm</string>
    <string name="steps">Steps</string>
    <string name="height_actual">Height actual</string>
    <string name="height_m">height [m]</string>
    <string name="height_init1">999 m</string>
    <string name="zero" translatable="false">0</string>
    <string name="height_accumulated">Elevation gain</string>
    <string name="decr_accumulated">Elevation loss</string>
    <string name="heightdesc_accumulated">Elev. gain/loss</string>
    <string name="time_accumulated">Time running</string>
    <string name="zero_m" translatable="false">0 m</string>
    <string name="zerozero_m" translatable="false">0 / 0 m</string>
    <string name="zero_s" translatable="false">00:00:00</string>
    <string name="no_data">No data</string>
    <string name="stop_service_notice">Disable notification.\nApp has to be restarted. \nAll unsaved data will be lost!</string>
    <string name="button_stop_service">Stop Service</string>
    <string name="button_reset_all">Reset</string>
    <string name="button_calibrate_height">Calibrate Height</string>
    <string name="pref_title_debug">Debugging Output</string>
    <string name="pref_sum_debug">Lots of unusable data written to SD Card. Data will clog up your space and will not be cleaned up.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="step_is_counting">Step and Height Sensor is counting.</string>
    <string name="debug_listener_started" translatable="false">Sensor listener started.</string>
    <string name="running">running</string>
    <string name="stepsensor_not_activated">Step sensor cannot be activated!</string>
    <string name="pref_title_stat_detail">Detailed statistics</string>
    <string name="pref_stat_detail_sum">Saves every step sensor event and markers with current steps and elevation gain. One file per day.\nIf disabled, markers will be saved nevertheless.</string>
    <string name="pref_cat_stat">Statistics</string>
    <string name="pref_title_stat_detail_clear">AutoClean of detailed statistic data</string>
    <string name="pref_cat_stat_det">Detailed statistics</string>
    <string name="pref_cat_deb">Debugging</string>
    <string name="text_reset">Reset steps, elevation gain  and height calibration to zero.</string>
    <string name="saving_marker">Saving marker</string>
    <string name="pref_stat_sum">Data will be saved to directory \"StepandHeightCounter\" on SD-Card</string>
    <string name="pref_title_stat_hour">Regular statistics</string>
    <string name="pref_title_stat_hour_clear">AutoClean of regular statistics</string>
    <string name="pref_stat_clear_sum">Delete old files.</string>
    <string name="pref_title_stat_clear_num">Maximum files</string>
    <string name="pref_stat_clear_num_sum">Maximum number of files to keep.</string>
    <string name="pref_title_stat_hour_min">Interval</string>
    <string name="pref_stat_hour_min_sum">Interval for saving regular statistics</string>
    <string name="pref_title_stat_daily">Daily statistics</string>
    <string name="pref_stat_daily_sum">Save step and elevation gain for every day. One file per year.\nThere\'s no AutoClean.</string>
    <string name="pref_stat_hour_sum">Save step and elevation gain at a regular interval.</string>
    <string name="pref_stat_hour_list_1">15 minutes</string>
    <string name="pref_stat_hour_list_2">1/2 hour</string>
    <string name="pref_stat_hour_list_3">1 hour</string>
    <string name="cant_write_sdcard">Can\'t write to SD-Card!</string>
    <string name="cant_activity_recognition">Can\'t use this app without Activity Recognition!</string>
    <string name="permission_sdcard_granted">Permission for SD Card granted</string>
    <string name="permission_ar_granted">Permission for Activity Recognition granted</string>
    <string name="no_write_sdcard_settings_disbled">Can\'t write to SD Card. Write settings disabled.</string>
    <string name="daily_steps">Steps today:</string>
    <string name="height_today">Height today:</string>
    <string name="height">Height</string>
    <string name="pref_cat_target">Daily target values</string>
    <string name="pref_stat_detail_multi_title">Detailed statistics</string>
    <string name="pref_stat_detail_multi_summary">Save various events. One file per day.</string>
    <string name="pref_stat_detail_multi_dialog_title">What to save</string>
    <string name="pref_stat_detail_marker">Marker</string>
    <string name="pref_stat_detail_start">Start measurement</string>
    <string name="pref_stat_detail_steps">Every step sensor event</string>
    <string name="pref_stat_detail_stop">Stop measurement</string>
    <string name="save_stat_headline_height">Time, timezone, steps, elevation gain, elevation decrease, time running, height, entry type\n</string>
    <string name="save_stat_headline">"Time, timezone, steps, elevation gain, elevation decrease, time running, entry type "</string>
    <string name="stat_type_reset_before">Before reset</string>
    <string name="stat_type_calibration_before">Before calibration</string>
    <string name="stat_type_calibration_after">After calibration</string>
    <string name="stat_type_reset_after">After reset</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="alert_title_autoclean_change">Delete old files!</string>
    <string name="alert_message_autoclean_changed">This will immediately delete existing old files according to setting!\nAre you sure?</string>
    <string name="OK">OK</string>
    <string name="alert_title_zero_num">0 not allowed</string>
    <string name="alert_message_zero_num">0 is not allowed for number of files to keep.</string>

</resources>
