<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main_portrait"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="grmpl.mk.stepandheightcounter.MainActivity"
    tools:showIn="@layout/activity_main" >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/relative_layout_portrait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:text="@string/button_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonStart"
                android:layout_marginTop="0dip"
                android:textAlignment="center"
                style="@android:style/Widget.Material.Button"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <TextView
                android:text="@string/no_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewError"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/buttonStart"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="@string/steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewSteps"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:layout_marginTop="@dimen/default_gap"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/textViewError"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="@string/height_actual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewHeight"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:layout_marginTop="@dimen/default_gap"
                android:layout_below="@+id/textViewSteps"
                android:layout_alignStart="@+id/textViewSteps" />

            <TextView
                android:text="@string/height_accumulated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewHeightacc"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:layout_marginTop="@dimen/default_gap"
                android:layout_marginBottom="@dimen/default_gap"
                android:layout_below="@+id/textViewHeight"
                android:layout_alignStart="@+id/textViewSteps" />

            <TextView
                android:text="@string/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewStepO"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:layout_above="@+id/textViewHeight"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp" />

            <TextView
                android:text="@string/height_init1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewHeightO"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:layout_alignBaseline="@+id/textViewHeight"
                android:layout_alignBottom="@+id/textViewHeight"
                android:layout_alignEnd="@+id/textViewStepO" />

            <TextView
                android:text="@string/zero_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewHeightaccO"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:layout_alignBaseline="@+id/textViewHeightacc"
                android:layout_alignBottom="@+id/textViewHeightacc"
                android:layout_alignEnd="@+id/textViewStepO"
                android:layout_marginTop="17dp" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editTextHeightcal"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                style="@android:style/Widget.Material.EditText"
                android:visibility="visible"
                android:background="@android:drawable/editbox_background"
                android:selectAllOnFocus="false"
                android:hint="@string/height_m"
                android:maxLines="1"
                android:layout_alignStart="@+id/textViewSteps"
                android:layout_below="@id/textViewHeightacc"
                android:layout_marginTop="@dimen/default_gap"
                android:layout_marginBottom="@dimen/default_gap"
                android:layout_marginEnd="25dp"/>

            <Button
                android:text="@string/button_calibrate_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCalibrate"
                android:layout_marginTop="29dp"
                style="@android:style/Widget.Material.Button"
                android:onClick="calibrateHeight"
                android:layout_toEndOf="@id/editTextHeightcal"
                android:layout_alignBaseline="@id/editTextHeightcal"/>

            <Button
                android:text="@string/button_reset_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonReset"
                android:onClick="resetData"
                style="@android:style/Widget.Material.Button"
                android:layout_marginTop="@dimen/default_gap"
                android:layout_marginBottom="@dimen/default_gap"
                android:layout_below="@+id/editTextHeightcal"
                android:layout_alignStart="@+id/textViewSteps" />

            <TextView
                android:text="@string/text_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:layout_alignBaseline="@+id/buttonReset"
                android:layout_toEndOf="@+id/buttonReset"
                android:layout_marginStart="5dp" />

            <ProgressBar
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonReset"
                android:layout_alignStart="@+id/buttonReset"
                android:layout_marginTop="40dip"
                android:id="@+id/progressBarSteps"
                android:layout_alignEnd="@+id/textViewStepO"
                android:progressBackgroundTint="@android:color/darker_gray" />

            <TextView
                android:text="@string/daily_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/progressBarSteps"
                android:layout_alignStart="@+id/progressBarSteps"
                android:layout_marginTop="0dp"
                android:id="@+id/textViewDailySteps"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="?android:attr/textColorPrimary" />

            <ProgressBar
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewDailySteps"
                android:layout_alignStart="@+id/textViewDailySteps"
                android:layout_marginTop="@dimen/default_gap"
                android:id="@+id/progressBarHeight"
                android:layout_alignEnd="@+id/textViewStepO"
                android:progressBackgroundTint="@android:color/darker_gray"
                android:max="100" />

            <TextView
                android:text="@string/height_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/progressBarHeight"
                android:layout_alignStart="@+id/progressBarHeight"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="60dp"
                android:id="@+id/textViewDailyHeight"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:text="@string/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewDailyStepsNum"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:layout_alignBaseline="@+id/textViewDailySteps"
                android:layout_alignBottom="@+id/textViewDailySteps"
                android:layout_alignEnd="@+id/textViewStepO"
                android:layout_marginTop="17dp"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:text="@string/zero_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewDailyHeightNum"
                android:layout_alignBaseline="@+id/textViewDailyHeight"
                android:layout_alignBottom="@+id/textViewDailyHeight"
                android:layout_alignEnd="@+id/textViewStepO"
                android:layout_marginTop="17dp"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="?android:attr/textColorPrimary"/>

        </RelativeLayout>
    </ScrollView>


